--- a/about.html
+++ b/about.html
@@ -6,9 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta name="copyright" content="MACode ID, https://macodeid.com/">
-
-  <title>One Health - Medical Center HTML5 Template</title>
+  <title>CounselCare</title>
 
   <link rel="stylesheet" href="assets/css/maicons.css">
 
