--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="#"><span class="text-primary">Counsel</span>-Care</a>
+        <a class="navbar-brand" href="about.html"><span class="text-primary">Counsel</span>-Care</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors.html">Doctors</a>
+              <a class="nav-link" href="doctors.html">Counselor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog.html">News</a>
@@ -53,7 +53,7 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary ml-lg-3" href="#">Let's Consult</a>
+              <a class="btn btn-primary ml-lg-3" href="doctors.html">Let's Consult</a>
             </li>
           </ul>
         </div> <!-- .navbar-collapse -->
