--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="#"><span class="text-primary">Counsel</span>-Care</a>
+        <a class="navbar-brand" href="index.html"><span class="text-primary">Counsel</span>-Care</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors.html">Doctors</a>
+              <a class="nav-link" href="doctors.html">Counselor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog.html">News</a>
@@ -52,7 +52,7 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary ml-lg-3" href="#">Let's Consult</a>
+              <a class="btn btn-primary ml-lg-3" href="doctors.html">Let's Consult</a>
             </li>
           </ul>
         </div> <!-- .navbar-collapse -->
@@ -142,7 +142,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">Siska Tri Septia</p>
-              <span class="text-sm text-grey">Cardiology</span>
+              <span class="text-sm text-grey"></span>
             </div>
           </div>
         </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">Maila Azzahra</p>
-              <span class="text-sm text-grey">Dental</span>
+              <span class="text-sm text-grey"></span>
             </div>
           </div>
         </div>
@@ -172,7 +172,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">Nida Aliyatur Rafiqah</p>
-              <span class="text-sm text-grey">General Health</span>
+              <span class="text-sm text-grey"></span>
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">Siti Heuning</p>
-              <span class="text-sm text-grey">General Health</span>
+              <span class="text-sm text-grey"></span>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">Muhammad Bagas</p>
-              <span class="text-sm text-grey">General Health</span>
+              <span class="text-sm text-grey"></span>
             </div>
           </div>
         </div>
