--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p class="mb-4" style="text-align: justify;">Selamat datang di Layanan Konseling Kami! Di tempat dimana ketenangan dan pemahaman bertemu! Inilah tempatnya dimana setiap jiwa diterima 
               dan dipahami sepenuhnya! Kami mengundang Anda untuk memulai perjalanan menuju kesehatan mental yang lebih baik! Kami menghormati setiap langkah yang Anda ambil! Mari 
               bersama-sama melangkah menuju kehidupan yang lebih sehat!</p>
-              <p style="text-align: justify;"> sini, kami menyediakan layanan informasi dan layanan konseling individu  yang didesain khusus untuk mendukung perjalanan Anda menuju kesehatan mental dan emosional 
+              <p style="text-align: justify;"> Disini, kami menyediakan layanan informasi dan layanan konseling individu  yang didesain khusus untuk mendukung perjalanan Anda menuju kesehatan mental dan emosional 
               yang lebih baik. Apakah Anda menghadapi tantangan pribadi, stres, kecemasan, atau sekadar ingin menjalani proses pertumbuhan diri, kami siap menjadi mitra setia Anda.
               </p>
             <a href="about.html" class="btn btn-primary">About Us</a>
