--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
             <li class="nav-item">
               <a class="nav-link" href="blog.html">News</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="btn btn-primary ml-lg-3" href="doctors.html">Let's Consult</a>
             </li>
@@ -253,21 +253,21 @@
   <footer class="page-footer">
     <div class="container foot">
       <hr>
-      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> MACode ID All rights reserved</p>
+      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> CounselCare</p>
     </div>
-  </footer>
+  </footer> <!-- .page-footer -->
 
-<script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="../assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+  
+  <script src="../assets/vendor/wow/wow.min.js"></script>
+  
+  <script src="../assets/js/theme.js"></script>
 
-<script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-<script src="assets/vendor/wow/wow.min.js"></script>
-
-<script src="assets/js/theme.js"></script>
-
-<script src="assets/js/style.js"></script>
+  <script src="../assets/js/style.js"></script>
   
 </body>
 </html>
