--- a/blog.html
+++ b/blog.html
@@ -49,9 +49,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="blog.html">News</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="btn btn-primary ml-lg-3" href="doctors.html">Let's Consult</a>
             </li>
@@ -95,7 +95,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_1.jpg" alt="nidaaliyaturrafikah">
+                        <img src="assets/img/person/person_2.jpg" alt="nidaaliyaturrafikah">
                       </div>
                       <span style="text-transform: capitalize;">nida a. rafikah</span>
                     </div>
@@ -145,7 +145,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_3.jpg" alt="">
+                        <img src="assets/img/person/person_2.jpg" alt="">
                       </div>
                       <span>Maila Azzahra</span>
                     </div>
@@ -169,7 +169,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_1.jpg" alt="">
+                        <img src="assets/img/person/person_2.jpg" alt="">
                       </div>
                       <span>Siska Tri Septia</span>
                     </div>
@@ -193,7 +193,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_1.jpg" alt="pict_blog-5">
+                        <img src="assets/img/person/person_2.jpg" alt="pict_blog-5">
                       </div>
                       <span>Siti Heuning</span>
                     </div>
@@ -217,7 +217,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_1.jpg" alt="">
+                        <img src="assets/img/person/person_2.jpg" alt="">
                       </div>
                       <span>Maila Azzahra</span>
                     </div>
@@ -241,7 +241,7 @@
                   <div class="site-info">
                     <div class="avatar mr-2">
                       <div class="avatar-img">
-                        <img src="assets/img/person/person_1.jpg" alt="">
+                        <img src="assets/img/person/person_2.jpg" alt="">
                       </div>
                       <span style="text-transform: capitalize;">nida A. rafikah</span>
                     </div>
@@ -389,21 +389,21 @@
   <footer class="page-footer">
     <div class="container foot">
       <hr>
-      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> MACode ID All rights reserved</p>
+      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> CounselCare</p>
     </div>
   </footer> <!-- .page-footer -->
 
-<script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="../assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+  
+  <script src="../assets/vendor/wow/wow.min.js"></script>
+  
+  <script src="../assets/js/theme.js"></script>
 
-<script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-<script src="assets/vendor/wow/wow.min.js"></script>
-
-<script src="assets/js/theme.js"></script>
-
-<script src="assets/js/style.js"></script>
+  <script src="../assets/js/style.js"></script>
   
 </body>
 </html>
