--- a/blog_details/blog-details_4.html
+++ b/blog_details/blog-details_4.html
@@ -49,9 +49,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="../blog.html">News</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="../contact.html">Contact</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="btn btn-primary ml-lg-3" href="../doctors.html">Let's Counsel</a>
             </li>
@@ -222,7 +222,7 @@
   <footer class="page-footer">
     <div class="container foot">
       <hr>
-      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> MACode ID All rights reserved</p>
+      <p class="text-center">Copyright &copy; <span id="copyright-year"></span> CounselCare</p>
     </div>
   </footer> <!-- .page-footer -->
 
